# afaligner

./: backupsetup.cfg  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build-wheel.yml
src/afaligner/: c_dtwbd_wrapper.py
src/afaligner/c_modules/: dtwbd.c  dtwbd.h
