[metadata]
name = afaligner
version = 0.2.0
description = Audio–subtitle aligner with custom DTW core
license = MIT

[options]
packages = find:
install_requires =
    cffi>=1.14
zip_safe = false

[options.packages.find]
where = src

[build_ext]
# ← Pull this out of [options] and into [build_ext]
cffi_modules =
    src/afaligner/c_dtwbd_wrapper.py:ffi

[options.setup_requires]
# You can drop this if you like; pyproject.toml already pulls in cffi
# but keeping it won’t hurt legacy installers.
cffi>=1.14
