[metadata]
name = afaligner
version = 0.2.0
description = Audio–subtitle aligner with custom DTW core
license = MIT

[options]
packages = find:
install_requires =
    cffi>=1.14
# tell setuptools-cffi which wrapper to invoke:
cffi_modules =
    src/afaligner/c_dtwbd_wrapper.py:ffi
zip_safe = false

[options.packages.find]
where = src
